css/site.css
/* ... */
audio, canvas, video {display:inline-block; *display:inline; *zoom:1;}
audio:not([controls]) {display:none;}
[hidden] {display:none;}
p {margin:0 0 1em;}
p + p {margin:1em 0;}
a {color:#39c; outline:none; -webkit-tap-highlight-color:rgba(220,179,57,.9);}
a:visited {}
a:hover {}
a:active {}
a:focus {outline:thin dotted;}
::-moz-selection,
::selection {background:#0058cf; color:#fff; text-shadow:none;}
strong, b {font-weight:bold;}
em, i {font-style:italic;}
h1,h2,h3,h4,h5,h6 {margin:1.4em 0 0.25em; line-height:1.1em; text-shadow:0 1px rgba(255,255,255,0.6); text-rendering:optimizeLegibility;}
h1 a,h2 a,h3 a,h4 a,h5 a,h6 a {text-decoration:none; color:#333;}
h1 a:visited,h2 a:visited,h3 a:visited,h4 a:visited,h5 a:visited,h6 a:visited {color:#444;}
h1 a:hover,h2 a:hover,h3 a:hover,h4 a:hover,h5 a:hover,h6 a:hover {text-decoration:underline;}
h1 {margin-top:0; font-size:2.0em;}
h2 {font-size:1.6em;}
h3 {font-size:1.4em;}
h4 {font-size:1.4em;}
h5 {font-size:1.3em;}
h6 {font-size:1.2em;}
h1 + h2,
h2 + h3,
h3 + h4,
h4 + h5 {margin-top:0;}

fieldset {margin:2em 0; padding:0; border:none;}

ol, ul {padding:0 0 0 2em;}
li {margin:0 0 0.25em;}
nav ul {margin:0; padding:0; list-style:none;}
nav li {margin:0; padding:0;}
nav a {text-decoration:none;}

table {width:100%; margin:2em 0; border-collapse:collapse; border-spacing:0;}
tr {border-top:1px solid #aaa;}
  tr:hover {background:rgba(0,0,0,0.05);}
  thead th,
  th {text-align:left;}
  tfoot th {text-align:right;}
th, td {padding:0.25em;}
  .number {text-align:right;}
td, td img {vertical-align:top;}

img {border:none; vertical-align:bottom; -ms-interpolation-mode:bicubic;
  -webkit-box-sizing:content-box;
     -moz-box-sizing:content-box;
          box-sizing:content-box;
}

sup {vertical-align:super; font-size:smaller;}
sub {vertical-align:sub; font-size:smaller;}
pre, code, kbd, samp {font-family:monospace, sans-serif;}
hr {clear:both; width:100%;}

/* GENERAL ELEMENTS
   ----------------------------------------------------*/
.entry {margin:0 0 3em;}
  .blog-archives .entry {margin:0 0 1.5em 1.5em;}
h1.entry-title {margin:0 0 0.25em; font-size:1.2em; line-height:1em; font-weight:normal;}
  h1.entry-title a {text-decoration:none;}
    h1.entry-title a:visited {}
h2.byline {margin:0 0 1em; font-size:1em; font-family:Helvetica, Verdana, Arial, sans-serif;}
.read-more:after {content:' ⋟';}
.meta {margin:1em 0; font-style:italic; font-size:0.9em; line-height:1.2em;}

pre	{overflow:auto; width:98%; margin:0 0 20px; padding:10px; background:#f9f9f9; border:1px solid #ccc; border-width:1px 0; font-family:monospace;}

.columnlists .content ul {margin:1em 0; padding-left:1em;}
.columnlists .content li {display:inline-block; *display:inline; *zoom:1; width:100%; padding-left:2em; text-indent:-2em;}
.columnlists .content li:before {content:'\2022'; margin-right:0.75em; font-weight:bold; font-size:1.3em;}
.columnlists .content li li {display:block;}
.columnlists .content li li:before {content:'\B7';}

.note {padding:10px 2.857142857%; font-size:90%; border:1px solid gray; background-color:#ffffdf;}

acronym, abbr, span.caps {font-size:0.9em; letter-spacing:.07em;}

.navigation {font-weight:bold;}
  .navigation h2 {display:none;}

.pagination {margin:0 0 3em; padding:0; list-style:none; font-weight:bold;}
  .pagination li {display:inline-block; *display:inline; *zoom:1; margin:0 1em 0 0;}

.social-links {margin:0; padding:0; list-style:none;}
  .social-links li {margin:0; padding:0; line-height:1em;}
  .social-links a {display:block; text-decoration:none;}
    .social-links a:hover {text-decoration:underline;}
  .social-links a img {vertical-align:top; margin-right:8px;}

/*================================
Figure & Fig caption
==================================*/
.post figure {margin:1.5em 0 2em;}
.post figure a {border:none;}
.post figcaption {margin:.75em 0; text-align:center; font:italic 13px/18px Cambria, Georgia, "Times New Roman", Times, serif;}
.post figure blockquote {margin-left:0; border:1px dashed #999; padding:6px; font-style:normal;}
.post figure blockquote p {margin:.75em 0; padding:0 1.5em;}
.post figure blockquote p:first-child {text-indent:0;}
.post figure blockquote p:first-child:before {content:'';}
.post figure blockquote p + p {margin-top:1.5em;}
.post figure ol, figure ul {margin:.75em 0; padding:0 1.5em;}
/* ... */

